--- a/AJO_MEAL/www/Views/buscar.html
+++ b/AJO_MEAL/www/Views/buscar.html
@@ -27,6 +27,9 @@
         </div>
       </div>
 
+      <div>
+        <button id="random" type="button" class="buttonrandom"><i class="fa-solid fa-shuffle"></i>Random meals</button>
+      </div>
       <!-- En esta seccion se mostraran las diferentes comidas que concuerden con la busqueda del usuario -->
 
       <div id="meal">
