--- a/AJO_MEAL/www/css/menu.css
+++ b/AJO_MEAL/www/css/menu.css
@@ -1,5 +1,44 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800;900&display=swap');
 
+
+
+
+/* CSS */
+.buttonrandom {
+  background-color: #e28413;
+  border-radius: 8px;
+  border-style: none;
+  box-sizing: border-box;
+  color: #FFFFFF;
+  cursor: pointer;
+  display: inline-block;
+  font-family: "Haas Grot Text R Web", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-size: 14px;
+  font-weight: 500;
+  height: 40px;
+  line-height: 20px;
+  list-style: none;
+  margin: 0;
+  outline: none;
+  padding: 10px 16px;
+  position: relative;
+  text-align: center;
+  text-decoration: none;
+  transition: color 100ms;
+  vertical-align: baseline;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+}
+
+.buttonrandom:hover,
+.buttonrandom:focus {
+  background-color: #e28413;
+}
+
+
+
+
 *{
     padding: 0;
     margin: 0;
@@ -333,6 +372,7 @@
 }
 .meal-name{
     padding: 1.5rem 0.5rem;
+    background-color: #fbf5f3;
 }
 .meal-name h3{
     font-size: 1.4rem;
