--- a/AJO_MEAL/www/Views/navbar.html
+++ b/AJO_MEAL/www/Views/navbar.html
@@ -1,4 +1,4 @@
-<div class="navbar">
+<div class="anavbar">
     <ul>
       <!-- Aqui se encuentran los 4 diferentes botones de la aplicacion buscar, favoritos, random y usuarios -->
       <li><a href="#" id="buscar"><i class="fa-solid fa-magnifying-glass"></i> </a></li>
