obtener favoritos de API
obtiene los favoritos del usuario dado, tiene unos bugs pero muestra lo que se pide, CRITICO RESOLVER.

--- a/AJO_MEAL/www/Views/favoritos.html
+++ b/AJO_MEAL/www/Views/favoritos.html
@@ -2,9 +2,9 @@
   <div class="meal-wrapper">
       <div class="meal-search">
         <!-- Seccion de arriba con texto en vista de favoritos -->
-          <h2 class="title">Tus favoritos serán agregados aquí.</h2>
-          <blockquote>Sientete libre de agregar los platillos que quieras, tus ganas de cocinar son tu unico limite!!.<br>
-              <cite>- Hola</cite>
+          <h2 class="title">Your favorites will be added here.</h2>
+          <blockquote>Feel free to add any dishes you want, your desire to cook is your only limit!<br>
+              
           </blockquote>
       </div>
 
