--- a/AJO_MEAL/www/Views/favoritos.html
+++ b/AJO_MEAL/www/Views/favoritos.html
@@ -41,6 +41,6 @@
       </div>
   </div>
 
-  <script src="/AJO_MEAL/www/js/favoritos.js"></script>
+  <script src="./js/favoritos.js"></script>
 </div>
-      
+  
