--- a/AJO_MEAL/www/Views/Users/login.html
+++ b/AJO_MEAL/www/Views/Users/login.html
@@ -17,6 +17,8 @@
                             <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
                             <label for="floatingPassword">Password</label>
                         </div>
+                        
+                        <input class="btn btn-primary m-2" type="submit" value="Login">
 
             </div>
 
@@ -38,11 +40,14 @@
                             <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
                             <label for="floatingPassword">Confirm Password</label>
                         </div>
+
+                        <input class="btn btn-primary m-2" type="submit" value="Register">
+
+
                 </div>
             </div>
 
 <!-- login submit -->
-<input class="btn btn-primary m-2" type="submit" value="Login">
 
 <!-- login-Register pills -->
 <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
