bug arreglado creo

--- a/AJO_MEAL/www/Views/buscar.html
+++ b/AJO_MEAL/www/Views/buscar.html
@@ -76,8 +76,8 @@
 
   <!-- Llamando Funcion de obtener 10 platillos random -->
 
-  <script src="/AJO_MEAL/www/js/randomMeal.js"></script>
+  <script src="js/randomMeal.js"></script>
 
     <!-- Llamando Funcion de busqueda en general -->
 
-  <script src="/AJO_MEAL/www/js/Search.js"></script>
+  <script src="js/Search.js"></script>
