--- a/AJO_MEAL/www/Views/navbar.html
+++ b/AJO_MEAL/www/Views/navbar.html
@@ -31,5 +31,5 @@
 
   <!-- LLamamos al archivo con la funcion para que se oculte la nav bar que hizo Arechiga -->
 
-  <script src="/AJO_MEAL/www/js/menu.js"></script>
+  <script src="js/menu.js"></script>
 
