--- a/AJO_MEAL/www/Views/favoritos.html
+++ b/AJO_MEAL/www/Views/favoritos.html
@@ -7,7 +7,15 @@
               
           </blockquote>
       </div>
-
+        <!-- Este apartado es para ingresar la busqueda que el usuario especifique -->
+        <div class="meal-search-box">
+          <!-- Input donde el usuario escribe para realizar la busqueda -->
+          <input type="text" class="search-control" placeholder="Enter an...." id="search-fav">
+          <!-- Boton para realizar la busqueda -->
+          <button type="submit" class="search-btn btn" onclick="GetFavoritescategory(1)" id="search-fav">
+            <i class="fas fa-search"></i>
+          </button>
+        </div>
       <!-- En esta seccion se iran agregando los favoritos que el usuario vaya seleccionando en la aplicacion -->
       <div class="fav-meals-container">
           <h2>Favourite Meals</h2>
