--- a/AJO_MEAL/www/Views/Users/login.html
+++ b/AJO_MEAL/www/Views/Users/login.html
@@ -10,15 +10,18 @@
             <h1 class="text-center">Login</h1>
             <!-- Inputs -->
                         <div class="form-floating m-4">
-                            <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
+                            <input type="text" class="form-control" id="LoginUser" placeholder="User">
                             <label for="floatingInput">User</label>
                         </div>
                         <div class="form-floating m-4">
-                            <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
+                            <input type="password" class="form-control" id="PasswordUser" placeholder="Password">
                             <label for="floatingPassword">Password</label>
                         </div>
                         
-                        <input class="btn btn-primary m-2" type="submit" value="Login">
+                        <div class="col-12 d-flex flex column align-items-center justify-content-center pb-3">
+                            <input class="btn btn-primary m-2 btnlog" type="submit" value="Login">
+                        </div>
+                            
 
             </div>
 
@@ -27,21 +30,24 @@
             <h1 class="text-center">Register</h1>
             <!-- Inputs -->
                         <div class="form-floating m-4">
-                            <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
+                            <input type="text" class="form-control" id="RegUser" placeholder="User">
                             <label for="floatingInput">User</label>
                         </div>
 
                         <div class="form-floating m-4">
-                            <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
+                            <input type="password" class="form-control" id="ConfirmPassword1" placeholder="Password">
                             <label for="floatingPassword">Password</label>
                         </div>
 
                         <div class="form-floating m-4">
-                            <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
+                            <input type="password" class="form-control" id="ConfirmPassword2" placeholder="Password">
                             <label for="floatingPassword">Confirm Password</label>
                         </div>
 
-                        <input class="btn btn-primary m-2" type="submit" value="Register">
+
+                        <div class="col-12 d-flex flex column align-items-center justify-content-center pb-3">
+                            <input class="btn btn-primary m-2" type="submit" value="Register">
+                        </div>
 
 
                 </div>
@@ -50,21 +56,34 @@
 <!-- login submit -->
 
 <!-- login-Register pills -->
-<ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
+<ul class="nav nav-underline mb-3" id="pills-tab" role="tablist">
 
     <li class="nav-item" role="presentation">
         <button class="nav-link active" id="pills-login-tab" data-bs-toggle="pill" data-bs-target="#pills-login" type="button" role="tab" aria-controls="pills-login" aria-selected="true">Login</button>
     </li>
 
     <li class="nav-item" role="presentation">
-        <button class="nav-link" id="pills-register" data-bs-toggle="pill" data-bs-target="#pills-register" type="button" role="tab" aria-controls="pills-register" aria-selected="false">Register</button>
+        <button class="nav-link" id="pills-register" data-bs-toggle="pill" data-bs-target="#pills-register" type="button" role="tab" aria-controls="pills-register" aria-selected="false">Sign Up</button>
     </li>
+</ul>
 
         </div>
     </div>
 
     <script>
+        
+    document.querySelector('.btnlog').addEventListener('click', function () {
+        // Capturar los valores del formulario
+        var user = $('#LoginUser').val();
+        var userPassword = $('#PasswordUser').val();
 
-        
-        
+        // Construir el objeto con los datos del formulario
+        var formData = {
+            usr_Name: user,
+            usr_password: userPassword,
+        };
+        console.log(formData);
+        login(formData);
+    });
+
     </script>
