--- a/AJO_MEAL/www/css/login.css
+++ b/AJO_MEAL/www/css/login.css
@@ -1,8 +1,8 @@
-body{
+.body{
 /* background: linear-gradient(to bottom, #fbf5f3,#efbd83); */
 /* background: #efbd83 */
-min-height: 100vh;
-background: linear-gradient(180deg, #fbf5f3 0%, #efbd83 39%, #e28413 100%);
+
+background-color:#E4E4E4;
 
 }
 
@@ -16,7 +16,7 @@ background: linear-gradient(180deg, #fbf5f3 0%, #efbd83 39%, #e28413 100%);
     flex-wrap: wrap ;
     align-items: center;
 
-    max-width: 40dvh;
+    max-width: 50dvh;
     border-radius: 10px;
-    margin-top: 20dvh;
+    margin-top: 30dvh;
 }
