--- a/AJO_MEAL/www/Views/Users/login.html
+++ b/AJO_MEAL/www/Views/Users/login.html
@@ -103,7 +103,7 @@
             usr_password: userPassword1,
         };
         console.log(formData);
-         login(formData);
+        Register(formData);
         }else{
             console.log("Las contraseñas no son iguales");
         }
